--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 69c52b0
+	base = fe4ca0c
 	trimbase = 
 	parent = arch/kinetic/mvsim
-	previous = 
+	previous = 69c52b0
